continuação do exercicio 1 L 8

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Lista08/nbproject/project.xml
 Lista08/nbproject/project.properties
 Lista08/nbproject/genfiles.properties
 Lista08/nbproject/build-impl.xml
+/Lista08/build/
